@@ -108,7 +108,21 @@ void OvmsVehicleSmartEQ::IncomingPollReply(const OvmsPoller::poll_job_t &job, ui
     case 0x793:
       switch (job.pid) {
         case 0x80: // rqIDpart OBL_7KW_Installed
-          //PollReply_BMS_BattVolts(m_rxbuf.data(), m_rxbuf.size(), 0);
+          //PollReply_BCB_OBC(m_rxbuf.data(), m_rxbuf.size());
+          break;
+      }
+      break;
+    case 0x764:
+      switch (job.pid) {
+        case 0x52: // temperature sensor values
+          PollReply_HVAC(m_rxbuf.data(), m_rxbuf.size());
+          break;
+      }
+      break;
+    case 0x763:
+      switch (job.pid) {
+        case 0x200c: // temperature sensor values
+          PollReply_TDB(m_rxbuf.data(), m_rxbuf.size());
           break;
       }
       break;
@@ -156,3 +170,14 @@ void OvmsVehicleSmartEQ::PollReply_BMS_BattTemps(const char* reply_data, uint16_
   }
 }
 
+void OvmsVehicleSmartEQ::PollReply_BCB_OBC(const char* reply_data, uint16_t reply_len) {
+  
+}
+
+void OvmsVehicleSmartEQ::PollReply_HVAC(const char* reply_data, uint16_t reply_len) {
+  //StandardMetrics.ms_v_env_cabintemp->SetValue( (((reply_data[3] << 8) | reply_data[4]) - 400) * 0.1);
+}
+
+void OvmsVehicleSmartEQ::PollReply_TDB(const char* reply_data, uint16_t reply_len) {
+  StandardMetrics.ms_v_env_temp->SetValue( (((reply_data[2] << 8) | reply_data[3]) - 400) * 0.1);
+}
